fix: change 'carrinho' to 'sacola', fix background color for 'aplicar desconto' button, change 'aplicar desconto' to 'aplicar', fix Cars.jsx z-index to stay on top of all layers

--- a/Frontend/src/components/Cart.css
+++ b/Frontend/src/components/Cart.css
@@ -10,6 +10,7 @@
 .cart__opened {
   visibility: visible;
   opacity: 1;
+  z-index: 1;
 }
 
 .cart__container {
@@ -108,6 +109,7 @@
   height: 36px; /* Ajuste da altura para dispositivos móveis */
   background-color: #fff;
   border: 1px solid #000;
+  color: black;
 }
 
 .cart__discount-button:hover {
@@ -135,7 +137,7 @@
   border-radius: 8px;
   text-decoration: none;
   transition: 250ms ease-in-out;
-  border: 2px solid #000;
+  border: 1px solid #000;
 }
 
 .cart__checkout_inactive {
@@ -146,7 +148,7 @@
 .cart__checkout:hover {
   background-color: #3b5e3c;
   color: #fff;
-  border: 2px solid #3b5e3c;
+  border: 1px solid #3b5e3c;
 }
 
 @media screen and (min-width: 580px) {
